2008-10-01  Russell Bryant <russell@digium.com>

	* Asterisk 1.4.22 released.

2008-09-09  Russell Bryant <russell@digium.com>

	* Asterisk 1.4.22-rc5 released.

2008-09-09 15:40 +0000 [r142063]  Russell Bryant <russell@digium.com>

	* res/res_features.c: Ensure that the stored CDR reference is still
	  valid after the bridge before poking at it. Also, keep the
	  channel locked while messing with this CDR. (fixes crashes
	  reported in issue #13409)

2008-09-08 21:10 +0000 [r141809]  Mark Michelson <mmichelson@digium.com>

	* channels/chan_sip.c: Fix pedantic mode of chan_sip to only check
	  the remote tag of an endpoint once a dialog has been confirmed.
	  Up until that point, it is possible and legal for the far-end to
	  send provisional responses with a different To: tag each time.
	  With this patch applied, these provisional messages will not
	  cause a matching problem. (closes issue #11536) Reported by: ibc
	  Patches: 11536v2.patch uploaded by putnopvut (license 60)

2008-09-08 21:02 +0000 [r141806]  Russell Bryant <russell@digium.com>

	* main/pbx.c: When doing an async goto, detect if the channel is
	  already in the middle of a masquerade. This can happen when
	  chan_local is trying to optimize itself out. If this happens,
	  fail the async goto instead of bursting into flames. (closes
	  issue #13435) Reported by: geoff2010

2008-09-08  Russell Bryant <russell@digium.com>

	* Asterisk 1.4.22-rc4 released.

2008-09-08 20:15 +0000 [r141741]  Jason Parker <jparker@digium.com>

	* Makefile, redhat (removed): Remove RPM package targets from
	  Makefile (and all associated parts). This has never worked in
	  1.4, and we decided that it makes no sense to be done here. There
	  are many distros out there that already have "proper" spec files
	  that can be (re)used. Closes issue #13113 Closes issue #10950
	  Closes issue #10952

2008-09-08 16:26 +0000 [r141678]  Russell Bryant <russell@digium.com>
