@@ -1,3 +1,9 @@
+2009-01-06  Tilghman Lesher <tlesher@digium.com>
+
+	* Asterisk 1.4.22.1 released.
+
+	* channels/chan_iax2.c: Security fix AST-2009-01
+
 2008-10-01  Russell Bryant <russell@digium.com>
 
 	* Asterisk 1.4.22 released.
